--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
-im a lemon
+<!DOCTYPE html>
+
+<html>
+	<head>
+		<title>Gordon's sauce finder</title>
+	</head>
+
+	<body>
+		<h1>Lamb Sauce Locator</h1>
+		<p>we regularly update the site with the latest lamb sauce locations!</p>
+		<p>click <a href="https://www.gordonramsayrestaurants.com/">here</a> to attempt to find the lamb sauce.</p>
+		<p><a href="http://cat-bounce.com/">lamb sauce tracker v2</a></p>
+		
+		<a href="https://www.youtube.com/watch?v=Rldo32Zv42k"><img src=
+		"images/lambsaucewanted.jpg" alt="A wanted poster for the long lost lamb sauce"></a>
+	</body>
+
+</html>
