--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
 	</head>
 
 	<body>
+		<nav>
+			<ul>
+				<li><a href="contact.html">Contact Us</a></li>
+				<li><a href="about.html">About Us</a></li>
+				<li><a href="tracker.html">Lamb Sauce Locator</a></li>
+				<li><a href="profile.html">Profile</a></li>
+				<li><a href="index.html">Home</a></li>
+			</ul>
+		</nav>
+		
 		<h1>Lamb Sauce Locator</h1>
 		<p>we regularly update the site with the latest lamb sauce locations!</p>
 		<p>click <a href="https://www.gordonramsayrestaurants.com/">here</a> to attempt to find the lamb sauce.</p>
