--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 				<li><a href="tracker.html">Lamb Sauce Locator</a></li>
 				<li><a href="profile.html">Profile</a></li>
 				<li><a href="index.html">Home</a></li>
+				<li><a href="donate.html">Donate</a></li>
 			</ul>
 		</nav>
 		
