Actually used the CSS I made :P

--- a/donate.html
+++ b/donate.html
@@ -3,7 +3,7 @@
 <html>
 	<head>
 		<title>Gordon's Sauce Finder</title>
-		<link rel="stylesheet" href="style.css">
+		<link rel="stylesheet" href="styleD.css">
 	</head>
 
 	<body>
