--- a/about.html
+++ b/about.html
@@ -18,6 +18,10 @@
 			</ul>
 		</nav>
 		
+			<audio controls loop>
+			<source src="audio/meatballparade.mp3" type="audio/mpeg">
+					Your browser does not support the audio element.
+			</audio>
 		<h1>About Us</h1>
 		<p>This website was created as a school project. The making of Sauce Finder has dramatically increased my knowledge of coding, and I plan to make it into something better in the future.</p>
 		<p> Thank you for visiting the website!</p>
