--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
 			</ul>
 		</nav>
 		
+			<audio controls loop>
+			<source src="audio/meatballparade.mp3" type="audio/mpeg">
+					Your browser does not support the audio element.
+			</audio>
 		<h1>Lamb Sauce Locator</h1>
 		<p>we regularly update the site with the latest lamb sauce locations!</p>
 		<p>click <a href="https://www.gordonramsayrestaurants.com/">here</a> to attempt to find the lamb sauce.</p>
