made navbar look nice

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<body>
 		<nav>
 			<ul>
-				<li><a href="index.html">Home</a></li>
+				<li><a class="active" href="index.html">Home</a></li>
 				<li><a href="contact.html">Contact Us</a></li>
 				<li><a href="about.html">About Us</a></li>
 				<li><a href="tracker.html">Lamb Sauce Locator</a></li>
