--- a/donate.html
+++ b/donate.html
@@ -14,7 +14,7 @@
 				<li><a href="about.html">About Us</a></li>
 				<li><a href="tracker.html">Lamb Sauce Locator</a></li>
 				<li><a href="profile.html">Profile</a></li>
-				<li><a href="donate.html">Donate</a></li>
+				<li><a class="active" href="donate.html">Donate</a></li>
 			</ul>
 		</nav>
 		
