--- a/tracker.html
+++ b/tracker.html
@@ -12,7 +12,7 @@
 				<li><a href="index.html">Home</a></li>
 				<li><a href="contact.html">Contact Us</a></li>
 				<li><a href="about.html">About Us</a></li>
-				<li><a href="tracker.html">Lamb Sauce Locator</a></li>
+				<li><a class="active" href="tracker.html">Lamb Sauce Locator</a></li>
 				<li><a href="profile.html">Profile</a></li>
 				<li><a href="donate.html">Donate</a></li>
 			</ul>
