--- a/test.html
+++ b/test.html
@@ -23,20 +23,13 @@
 					Your browser does not support the audio element.
 			</audio>
 		<h1>Hello, guest! You are not currently logged in. Please login below.</h1>
-		<form action="login.php">
-		 <div class="imgcontainer">
-			<img src="images/avt.png" alt="Basic Avatar" width=250px class="avatar">
-		</div>
-		
-		<div class="container">
-			<label><b>Username</b></label>
-			<input type="text" placeholder="Enter Username" name="uname" required>
-			
-			<label><b>Password</b></label>
-			<input type="password" placeholder="Enter Password" name="psw" required>
-			
-			<button type="submit">Login</button>
-		</div>
+		<form class="login_form" method="post" action="login.php">
+<div>Username: <input type="text" name="username" /></div>
+<div>Password: <input type="password" name="password" /></div>
+<div><input type="submit" value="Login" name="Login" /></div>
+</form>
+<div>You can use username "User1" of "User2" and password "qwerty" to login in system</div>
+
 		
 		<div class="container" style="background-color:f1f1f1">
 			<span class="psw">Forgot <a href="#">password?</a></span>
